--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ font-family: adobe-garamond-pro, serif;
   width: 80%;
   margin: auto;
   font-size: 20pt;
-  margin-top: 35%;
+  margin-top: 25%;
 }
 .bottom_button
 {
@@ -212,4 +212,6 @@ a
   margin: auto;
   font-size: 20pt;
   margin-top: 5%;
+  text-align: center;
+  margin-bottom: 50px ;
 }
